fix: navbar not displaying correct in collapse state. add media queries to fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ h4 {
 .navbar {
 	background: var(--clr-accent);
 	color: var(--clr-light);
+	padding: 0 1.5rem;
 }
 
 .navbar-nav {
@@ -71,6 +72,18 @@ h4 {
 
 .active {
 	border-bottom: 2px solid #fff;
+}
+
+@media screen and (max-width: 992px) {
+	.nav-item {
+		margin: 0 auto;
+	}	
+}
+
+@media screen and (min-width: 992px) {
+	.collapse > .btn {
+		display: inline-block;
+	}
 }
 
 /* Modal */
@@ -455,4 +468,19 @@ h4 {
 	height: 15rem;
 	width: 100%;
 	background-size: cover;
+}
+
+/* credit to W3Schools for loader */
+.loader {
+	border: 16px solid var(--clr-light);
+	border-top: 16px solid var(--clr-accent);
+	border-radius: 50%;
+	width: 120px;
+	height: 120px;
+	animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
 }
